--- a/AppBlobAzure.iOS/Info.plist
+++ b/AppBlobAzure.iOS/Info.plist
@@ -40,5 +40,13 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Usamos tu camara para tomar fotografias</string>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Usamos tu album para seleccionar fotografías </string>
 </dict>
 </plist>
